nix-compat-derive-tests/tests/ui/parse_bad_nix.stderr
error: expected attribute arguments in parentheses: #[nix(...)]
 --> tests/ui/parse_bad_nix.rs:5:7
  |
5 |     #[nix]
  |       ^^^
