nix-compat-derive-tests/tests/ui/parse_bad_nix.rs
use nix_compat_derive::NixDeserialize;

#[derive(NixDeserialize)]
pub struct Test {
    #[nix]
    version: u8,
}

fn main() {}
